# openai-token-counter

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: constraints.txt  labeler.yml  nightly.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/openai_token_counter/: __init__.py  chat_objects.py  format.py  models.py  token_counter.py
src/openai_token_counter/utils/: format.py
tests/: __init__.py  conftest.py  test_format.py
tests/counter/: resources.py  test_token_counter.py
tests/format/: test_format.py
