[tool.poetry]
name = "openai-token-counter"
version = "1.0.2"
description = "OpenAI Token Counter"
authors = ["Eitan Nargassi <eitan@nyno.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nyno-ai/openai-token-counter"
repository = "https://github.com/nyno-ai/openai-token-counter"
documentation = "https://github.com/nyno-ai/openai-token-counter/README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/Eitan1112/openai-token-counter/releases"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.3.0"
tiktoken = "^0.5.1"

[tool.poetry.group.dev.dependencies]
Pygments = "^2.16.1"
black = "^23.7.0"
coverage = "^7.3.0"
darglint = "^1.8.1"
flake8 = "^6.1.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.7.10"
flake8-docstrings = "^1.7.0"
flake8-rst-docstrings = "^0.3.0"
furo = "^2023.8.19"
isort = "^5.12.0"
mypy = "^1.5.1"
pep8-naming = "^0.13.3"
pre-commit = "^3.3.3"
pre-commit-hooks = "^4.4.0"
safety = "^2.3.5"
sphinx = "^7.2.2"
sphinx-autobuild = "^2021.3.14"
sphinx-click = "^5.0.1"
myst-parser = "^2.0.0"
nox-poetry = "^1.0.3"
typeguard = "^4.1.2"
pytest-mock = "^3.11.1"
python-dotenv = "^1.0.0"
openai = "^0.28.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pyupgrade = "^3.13.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["openai_token_counter", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
disable_error_code = "no-untyped-call"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
